hphp/test/zend/good/Zend/tests/bug48215_2.php.expectf

Fatal error: Call to undefined method b::b() in %s/bug48215_2.php on line 9
